syntax = "proto3";

option csharp_namespace = "GrpcService";

package logService;

service Logger {
  rpc LogMessage (LogRequest) returns (LogReply);
}

message LogRequest {
  string message = 1;
}

message LogReply {
  string message = 1;
}
